crates/valen-parser/tests/snapshots/parser__for_while_no_semicolon.snap
---
source: crates/valen-parser/tests/parser.rs
expression: "check(\"fn f() { for x in xs { process(x); }\\nwhile cond { tick(); }\\nloop { break; } }\")"
---
=== AST ===
[
    Fn(
        FnDecl {
            visibility: Internal,
            name: "f",
            generics: [],
            params: [],
            return_type: None,
            body: Some(
                Block {
                    stmts: [
                        ExprSemi(
                            For(
                                ForExpr {
                                    var: "x",
                                    iter: Path(
                                        Path {
                                            segments: [
                                                PathSegment {
                                                    name: "xs",
                                                    double_colon: false,
                                                    generics: [],
                                                    span: Span {
                                                        start: 18,
                                                        end: 20,
                                                        file_id: FileId(
                                                            0,
                                                        ),
                                                    },
                                                },
                                            ],
                                            span: Span {
                                                start: 18,
                                                end: 20,
                                                file_id: FileId(
                                                    0,
                                                ),
                                            },
                                        },
                                    ),
                                    body: Block {
                                        stmts: [
                                            ExprSemi(
                                                Call(
                                                    CallExpr {
                                                        callee: Path(
                                                            Path {
                                                                segments: [
                                                                    PathSegment {
                                                                        name: "process",
                                                                        double_colon: false,
                                                                        generics: [],
                                                                        span: Span {
                                                                            start: 23,
                                                                            end: 30,
                                                                            file_id: FileId(
                                                                                0,
                                                                            ),
                                                                        },
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 23,
                                                                    end: 30,
                                                                    file_id: FileId(
                                                                        0,
                                                                    ),
                                                                },
                                                            },
                                                        ),
                                                        args: [
                                                            CallArg {
                                                                name: None,
                                                                value: Path(
                                                                    Path {
                                                                        segments: [
                                                                            PathSegment {
                                                                                name: "x",
                                                                                double_colon: false,
                                                                                generics: [],
                                                                                span: Span {
                                                                                    start: 31,
                                                                                    end: 32,
                                                                                    file_id: FileId(
                                                                                        0,
                                                                                    ),
                                                                                },
                                                                            },
                                                                        ],
                                                                        span: Span {
                                                                            start: 31,
                                                                            end: 32,
                                                                            file_id: FileId(
                                                                                0,
                                                                            ),
                                                                        },
                                                                    },
                                                                ),
                                                                span: Span {
                                                                    start: 31,
                                                                    end: 32,
                                                                    file_id: FileId(
                                                                        0,
                                                                    ),
                                                                },
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 23,
                                                            end: 33,
                                                            file_id: FileId(
                                                                0,
                                                            ),
                                                        },
                                                    },
                                                ),
                                            ),
                                        ],
                                        tail: None,
                                        span: Span {
                                            start: 21,
                                            end: 36,
                                            file_id: FileId(
                                                0,
                                            ),
                                        },
                                    },
                                    span: Span {
                                        start: 9,
                                        end: 36,
                                        file_id: FileId(
                                            0,
                                        ),
                                    },
                                },
                            ),
                        ),
                        ExprSemi(
                            While(
                                WhileExpr {
                                    cond: Path(
                                        Path {
                                            segments: [
                                                PathSegment {
                                                    name: "cond",
                                                    double_colon: false,
                                                    generics: [],
                                                    span: Span {
                                                        start: 43,
                                                        end: 47,
                                                        file_id: FileId(
                                                            0,
                                                        ),
                                                    },
                                                },
                                            ],
                                            span: Span {
                                                start: 43,
                                                end: 47,
                                                file_id: FileId(
                                                    0,
                                                ),
                                            },
                                        },
                                    ),
                                    body: Block {
                                        stmts: [
                                            ExprSemi(
                                                Call(
                                                    CallExpr {
                                                        callee: Path(
                                                            Path {
                                                                segments: [
                                                                    PathSegment {
                                                                        name: "tick",
                                                                        double_colon: false,
                                                                        generics: [],
                                                                        span: Span {
                                                                            start: 50,
                                                                            end: 54,
                                                                            file_id: FileId(
                                                                                0,
                                                                            ),
                                                                        },
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 50,
                                                                    end: 54,
                                                                    file_id: FileId(
                                                                        0,
                                                                    ),
                                                                },
                                                            },
                                                        ),
                                                        args: [],
                                                        span: Span {
                                                            start: 50,
                                                            end: 56,
                                                            file_id: FileId(
                                                                0,
                                                            ),
                                                        },
                                                    },
                                                ),
                                            ),
                                        ],
                                        tail: None,
                                        span: Span {
                                            start: 48,
                                            end: 59,
                                            file_id: FileId(
                                                0,
                                            ),
                                        },
                                    },
                                    span: Span {
                                        start: 37,
                                        end: 59,
                                        file_id: FileId(
                                            0,
                                        ),
                                    },
                                },
                            ),
                        ),
                    ],
                    tail: Some(
                        Loop(
                            LoopExpr {
                                body: Block {
                                    stmts: [
                                        ExprSemi(
                                            Break(
                                                BreakExpr {
                                                    value: None,
                                                    span: Span {
                                                        start: 67,
                                                        end: 72,
                                                        file_id: FileId(
                                                            0,
                                                        ),
                                                    },
                                                },
                                            ),
                                        ),
                                    ],
                                    tail: None,
                                    span: Span {
                                        start: 65,
                                        end: 75,
                                        file_id: FileId(
                                            0,
                                        ),
                                    },
                                },
                                span: Span {
                                    start: 60,
                                    end: 75,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            },
                        ),
                    ),
                    span: Span {
                        start: 7,
                        end: 77,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ),
            is_open: false,
            is_override: false,
            is_abstract: false,
            span: Span {
                start: 0,
                end: 77,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
